Fixes overlapping menu bug on IE8

--- a/adhocracy_client/static/stylesheets/style.css
+++ b/adhocracy_client/static/stylesheets/style.css
@@ -180,7 +180,7 @@ a.ie-message:hover {
 
 .menu ul{
     z-index:600;
-    text-align:left;
+    text-align:center;
 }
 
 .menu li {
